-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b04
-
sparc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8045242 | 8u25 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8036029 | 8u20 | Poonam Bajaj Parhar | P3 | Closed | Fixed | b04 |
| JDK-8037130 | 8u11 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8036838 | 8u5 | Poonam Bajaj Parhar | P3 | Closed | Fixed | b12 |
| JDK-8039589 | emb-8u26 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b17 |
| JDK-8037668 | emb-8u6 | Poonam Bajaj Parhar | P3 | Closed | Fixed | b10 |
| JDK-8036023 | 7u80 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8060849 | 7u79 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8057282 | 7u76 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8037237 | 7u65 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b03 |
| JDK-8040350 | 7u60 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b15 |
| JDK-8036839 | 7u55 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b12 |
| JDK-8036028 | 7u51 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b34 |
# Internal Error (output.cpp:1576), pid=3601, tid=15
# guarantee((int)(blk_starts[i+1] - blk_starts[i]) >= (current_offset - blk_offset)) failed: shouldn't increase block size
The customer hit the bug with the 32bit version on a virtual machine running on T-series. We didn't identify that machine as niagara so we used the default loop alignment (16 bytes instead of 4). I cannot reproduce the crash on 64bit, but the problem exists there as well.
It very hard to write a unit test for the fix (at least I wasn't able to), since the code must specifically trigger block rotation in loop to make sure that the loop header starts with a compare.
- backported by
-
JDK-8036023 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8036028 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8036839 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8037130 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8037237 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8039589 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8040350 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8045242 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8057282 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8060849 Second phase of branch shortening doesn't account for loop alignment
-
- Resolved
-
-
JDK-8036029 Second phase of branch shortening doesn't account for loop alignment
-
- Closed
-
-
JDK-8036838 Second phase of branch shortening doesn't account for loop alignment
-
- Closed
-
-
JDK-8037668 Second phase of branch shortening doesn't account for loop alignment
-
- Closed
-
- relates to
-
JDK-8056124 Hotspot should use PICL interface to get cacheline size on SPARC
-
- Resolved
-
-
JDK-7063629 use cbcond in C2 generated code on T4
-
- Closed
-