8035283: Second phase of branch shortening doesn't account for loop alignment

Added missing check for loop padding case.

Reviewed-by: kvn, jrose